static/themes/blue/theme.css
/* ... */
.update-plugin-list ul {
  margin: 0;
  padding-left: 18px;
}

.update-plugin-list li {
  padding: 2px 0;
}

.modal-footer {
  padding: 2px 16px;
  background-color: #5cb85c;
  color: white;
}

/* alerts */

#refreshLight {
  color: #f44336;
}

#red_circle {
  width: 50px;
  height: 50px;
  background: red;
  border-radius: 50%
}

#green_circle {
  width: 50px;
  height: 50px;
  background: green;
  border-radius: 50%
}

.alert {
  padding: 20px;
  background-color: #f44336;
  color: white;
  opacity: 1;
  transition: opacity 0.6s;
  margin-bottom: 15px;
}

.alert.success {background-color: #4CAF50;}
.alert.info {background-color: #2196F3;}
.alert.warning {background-color: #ff9800;}

.closebtn {
  margin-left: 15px;
  color: white;
  font-weight: bold;
  float: right;
  font-size: 22px;
  line-height: 20px;
  cursor: pointer;
  transition: 0.3s;
}

.closebtn:hover {
  color: black;
}

table td.shrink {
    width: 1px;
    white-space:nowrap
}

table td.expand {
    width: 99%
}

div.header {
    background-image: url('logo.png');
    background-repeat: no-repeat;
    background-position: 42px 20px;
    background-color: #2E3959;
    height:80px;
}

div.header div.title {
    font-family: 'Open Sans', sans-serif;
    font-size: 24pt;
    text-transform:uppercase;
    text-align:right;
    color:white;
    padding-top:10px;
    padding-right:16px;
}

#Userinfo {
    font-size: 10pt;
    color:white;
    padding-left:18px;
}


div.header div.titlenote {
    font-size: 10pt;
    color:white;
    padding-left:8px;
}

div.footer {
    background-image: url(grass.png);
    background-position: top right -200px;
    background-repeat: no-repeat;
    background-color: #2E3959;
    color:white;
    text-align: right;
    padding: 16px 170px 16px 16px;
    font-size:9pt;
    clear: both;
}

.footer a:link, .footer a:visited {
    color: white;
    text-decoration: none;
}

.footer a:hover {
    color: black;
    text-decoration: none;
}

.footer a:active {
  color: white;
  text-decoration: none;
}

#pluginFooter{
    border:3px solid #2E3959;
    border-radius: 12px;
    padding: 4px;
    border-spacing: 0px;
    background-color: white;
}

/******** Checkbox **********/

/* The container */
.container {
  display: block;
  position: relative;
  padding-left: 35px;
  margin-bottom: 12px;
  cursor: pointer;
  font-size: 22px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

/* Hide the browser's default checkbox */
.container input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

/* Create a custom checkbox */
.checkmark {
  position: absolute;
  top: 0;
  height: 20px;
  width: 20px;
  background-color: #bbb;
  border-radius: 20%;
  border: 1px solid #333;
  margin: -4px;
}

/* On mouse-over, add a grey background color */
.container:hover input ~ .checkmark {
  background-color: #eee;
}

/* When the checkbox is checked, add a blue background */
.container input:checked ~ .checkmark {
  background-color: rgb(50, 166, 32);
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
  content: "";
  position: absolute;
  display: none;
}

/* Show the checkmark when checked */
.container input:checked ~ .checkmark:after {
  display: block;
}

/* Style the checkmark/indicator */
.container .checkmark:after {
  left: 9px;
  top: 5px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  margin: -4px;
}

/******** Changes the appearance of a link **********/

div.content {
    background-color: #FCFAEB;
    color:black;
}

div.body {
    margin:0px;
    padding:0px;
    background-image: url(grass.png);
}

div.panel {
    margin-left: 240px;
    padding:12px;
    background-color: white;
    min-height: 200px;
}

div.panel div.title {
    font-weight: 700;
    font-size: 20pt;
    margin-bottom: 8px;
}

div.controlblock, div.simpleblock, div.simpleinlineblock {
    border:3px solid #2E3959;
    border-radius: 12px;
    margin: 8px 0px;
}

div.simpleinlineblock {
    display: inline-block;
}

div.controlblock p, div.controlblock div {
    padding: 2px 24px;
}

span.stationName:after {
    content: ",";
}

span.stationName:last-child:after {
    content: "";
}

.program {
    width:95%;
}

.program p:first-child {
    background-color: #2E3959;
    color: white
}

.program.disabled {
    border-color: #7D1921;
}

.program.disabled p:first-child {
    background-color: #7D1921;
    color: white
}

/******** General Global Styles **********/

#errorHint {
    color: #7D1921;
}

.inputError {
    color: #7D1921;
}

.showInterval {
    text-align:center;
}

.program p:first-child .val {
    color: white;
}

.val {
    font-weight: 700;
    color: #397F19;
}

/******** Clock Styles **********/

div#status {
    float:left;
    width: 240px;
    text-align:center;
    color:white;
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    padding-top: 23px;
    padding-bottom: 12px;
    background-color: #333;
    opacity: .85;
}

#deviceTime {
    font-size: 24pt;
}

#deviceTime span {
    display:inline-block;
    position:relative;
    top: 6px;
    font-size:42pt;
    width: 60px;
    text-align:center;
    letter-spacing: -3px;
}

#deviceTime span.sep {
    text-align: center;
    width: 8px;
    font-size: 24pt;
    top: -4px;
}

#deviceTime span.hour {
    text-align:right;
}

#deviceTime span.second {
    text-align:left;
    font-size:18pt;
    letter-spacing: -1px;
    top: -16px;
    left: 6px;
    width: 36px;
}

#deviceTime span.ampm {
    position:relative;
    top:6px;
    left: -32px;
    font-size:18pt;
    width: 36px;
    text-transform:uppercase;
    letter-spacing: 0px;
    text-align: right;
}

#deviceDate {
    margin-top:16px;
    font-weight:400;
}
/* ... */

